...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calculator_fragment"
    tools:context=".uifragment.CalculatorFragment">

...

        <TextView
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n8"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n9"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n4"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n5"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n6"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n1"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n2"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n3"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/n0"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

        <TextView
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
...
